<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textJudul"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textPanjang"
        android:textColor="@color/black"
        android:layout_marginTop="8dp"
        android:textStyle="bold" />
    <EditText
        android:id="@+id/fieldPanjang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textLebar"
        android:textColor="@color/black"
        android:layout_marginTop="8dp"
        android:textStyle="bold" />
    <EditText
        android:id="@+id/fieldLebar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textTinggi"
        android:textColor="@color/black"
        android:layout_marginTop="8dp"
        android:textStyle="bold" />
    <EditText
        android:id="@+id/fieldTinggi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"/>

    <Button
        android:id="@+id/btnHitung"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:text="@string/textHitung"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textHasil"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"/>
    <TextView
        android:id="@+id/tvHasil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/tv_hasil"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_gravity="center"/>

</LinearLayout>